--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/bmacc-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A decentralized way to show appreciation to your favorite creators with cryptocurrency tips on the Base network">
+    <link rel="canonical" href="https://app.bmacc.io">
     <title>Buy me a crypto coffee | BMACC</title>
   </head>
   <body class="bg-zinc-900">
