--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/bmacc-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A decentralized way to show appreciation to your favorite creators with cryptocurrency tips on the Base network">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <meta name="description" content="Go beyond likes and hearts, show real appreciation to your favorite creators with cryptocurrency tips. Only on Base.">
     <link rel="canonical" href="https://app.bmacc.io">
     <title>Buy me a crypto coffee | BMACC</title>
   </head>
