Adding content as per client request

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <meta name="description" content="Go beyond likes and hearts, show real appreciation to your favorite creators with cryptocurrency tips. Only on Base.">
+    <meta name="description" content="BMACC (Buy Me a Crypto Coffee) lets anyone receive crypto tips through a link or QR code - no middlemen, no hassle. Built on blockchain for transparency, we also share 50% of platform revenue with token holders in USDC.">
     <link rel="canonical" href="https://app.bmacc.io">
     <title>Buy me a crypto coffee | BMACC</title>
   </head>
