--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/bmacc-logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <meta name="description" content="BMACC (Buy Me a Crypto Coffee) lets anyone receive crypto tips through a link or QR code - no middlemen, no hassle. Built on blockchain for transparency, we also share 50% of platform revenue with token holders in USDC.">
-    <link rel="canonical" href="https://app.bmacc.io">
-    <title>Buy me a crypto coffee | BMACC</title>
-  </head>
-  <body class="bg-zinc-900">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/images/bmacc-logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <meta name="description" content="This is BMACC - Drop-in crypto tipping for creators">
+  <link rel="canonical" href="https://app.bmacc.io">
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="BMACC" />
+  <meta property="og:description" content="This is BMACC - Drop-in crypto tipping for creators" />
+  <meta property="og:url" content="https://bmacc-pink.vercel.app/" />
+  <meta property="og:image" content="https://100msfireside-kolt.vercel.app/fireside_banner.png" />
+  <meta property="og:type" content="website" />
+
+  <!-- Farcaster Frame Tags -->
+  <meta name="fc:frame"
+    content='{"version":"next","imageUrl":"https://100msfireside-kolt.vercel.app/fireside_banner.png"%7D' />
+
+  <title>BMACC</title>
+</head>
+
+<body class="bg-zinc-900">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
