--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
   <!-- Farcaster Frame Tags -->
   <meta name="fc:frame" content='{
-    "version": "next",
-    "imageUrl": "https://100msfireside-kolt.vercel.app/fireside_banner.png",
-    "button": {
-      "title": "Tune in!",
-      "action": {
-        "type": "launch_frame",
-        "name": "Fireside 100ms",
-        "url": "http://localhost:3000",
-        "splashImageUrl": "https://100msfireside-kolt.vercel.app/fireside-logo.svg",
-        "splashBackgroundColor": "#000000"
-      }
+  "version": "1",
+  "imageUrl": "https://100msfireside-kolt.vercel.app/fireside_banner.png",
+  "button": {
+    "title": "Send a Tip",
+    "action": {
+      "type": "launch_frame",
+      "name": "Yoink!",
+      "url": "https://bmacc-pink.vercel.app/",
+      "splashImageUrl": "https://100msfireside-kolt.vercel.app/fireside-logo.svg",
+      "splashBackgroundColor": "#000000"
     }
-  }'>
+  }
+}'>
 
   <title>BMACC</title>
 </head>
