--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-  <meta name="description" content="This is BMACC - Drop-in crypto tipping for creators">
+  <meta name="description" content="BMACC - Turning 'Thank you' into real value">
   <link rel="canonical" href="https://app.bmacc.io">
 
   <!-- Open Graph Tags -->
   <meta property="og:title" content="BMACC" />
-  <meta property="og:description" content="This is BMACC - Drop-in crypto tipping for creators" />
+  <meta property="og:description" content="BMACC - Turning 'Thank you' into real value" />
   <meta property="og:url" content="https://bmacc-pink.vercel.app/" />
-  <meta property="og:image" content="https://100msfireside-kolt.vercel.app/fireside_banner.png" />
+  <meta property="og:image" content="https://bmacc-pink.vercel.app/images/back_baseapp.png" />
   <meta property="og:type" content="website" />
 
   <!-- Farcaster Frame Tags -->
   <meta name="fc:frame" content='{
   "version": "1",
-  "imageUrl": "https://100msfireside-kolt.vercel.app/fireside_banner.png",
+  "imageUrl": "https://bmacc-pink.vercel.app/images/back_baseapp.png",
   "button": {
     "title": "Send a Tip",
     "action": {
       "type": "launch_frame",
-      "name": "Yoink!",
+      "name": "BMACC",
       "url": "https://bmacc-pink.vercel.app/",
-      "splashImageUrl": "https://100msfireside-kolt.vercel.app/fireside-logo.svg",
-      "splashBackgroundColor": "#000000"
+      "splashImageUrl": "https://bmacc-pink.vercel.app/images/logo_baseapp.png",
+      "splashBackgroundColor": "#d6b9aa"
     }
   }
 }'>
