new domain images

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
   <!-- Open Graph Tags -->
   <meta property="og:title" content="BMACC" />
   <meta property="og:description" content="BMACC - Turning 'Thank you' into real value" />
-  <meta property="og:url" content="https://bmacc-pink.vercel.app/" />
-  <meta property="og:image" content="https://bmacc-pink.vercel.app/images/back_baseapp.png" />
+  <meta property="og:url" content="https://bmacc.app/" />
+  <meta property="og:image" content="https://bmacc.app/images/back_baseapp.png" />
   <meta property="og:type" content="website" />
 
   <!-- Farcaster Frame Tags -->
   <meta name="fc:frame" content='{
   "version": "1",
-  "imageUrl": "https://bmacc-pink.vercel.app/images/back_baseapp.png",
+  "imageUrl": "https://bmacc.app/images/back_baseapp.png",
   "button": {
     "title": "Send a Tip",
     "action": {
       "type": "launch_frame",
       "name": "BMACC",
-      "url": "https://bmacc-pink.vercel.app/",
-      "splashImageUrl": "https://bmacc-pink.vercel.app/images/logo_baseapp.png",
+      "url": "https://bmacc.app/",
+      "splashImageUrl": "https://bmacc.app/images/logo_baseapp.png",
       "splashBackgroundColor": "#d6b9aa"
     }
   }
